kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: statista
  labels:
    name: statista
