kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statista-api
  namespace: statista
  labels:
    app: statista-api
spec:
  selector:
    app: statista-api
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
